--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 
       <nav>
         <ul>
-          <li><a href="#home">HOME</a></li>
-          <li><a href="#gifts">GIFTS</a></li>
+          <li><a href="index.html">HOME</a></li>
+          <li><a href="catalog.html">CATALOG</a></li>
           <li><a href="about.html">ABOUT</a></li>
           <li><a href="#contact">CONTACT</a></li>
           <li><a href="login.html">LOGIN</a></li>
