--- a/signup.html
+++ b/signup.html
@@ -22,7 +22,7 @@
       <nav>
   <ul>
     <li><a href="index.html">HOME</a></li>
-    <li><a href="gifts.html">GIFTS</a></li>   <!-- אם יש לך דף כזה -->
+    <li><a href="catalog.html">CATALOG</a></li>   <!-- אם יש לך דף כזה -->
     <li><a href="about.html">ABOUT</a></li>
     <li><a href="contact.html">CONTACT</a></li>
     <li><a href="login.html">LOGIN</a></li>
