--- a/biopeptix.html
+++ b/biopeptix.html
@@ -35,17 +35,41 @@
 
       <div class="brand-products">
         <div class="product-card">
-          <img src="biopeptix1.jpg" alt="Biopeptix Product 1">
+          <img src="biopeptix1.jpg.webp" alt="Biopeptix Product 1">
           <h3>Active Serum</h3>
           <p>סרום פעיל מבוסס פפטידים לשיקום העור.</p>
           <p class="price">290 ₪</p>
         </div>
 
         <div class="product-card">
-          <img src="biopeptix2.jpg" alt="Biopeptix Product 2">
+          <img src="biopeptix2.jpg.webp" alt="Biopeptix Product 2">
           <h3>Hydra Cream</h3>
           <p>קרם לחות אינטנסיבי לשימוש יומיומי.</p>
           <p class="price">210 ₪</p>
+        </div>
+           <div class="product-card">
+          <img src="biopeptix3.jpg.webp" alt="Biopeptix Product 3">
+          <h3>Face Soap</h3>
+          <p>סבון פנים.</p>
+          <p class="price">290 ₪</p>
+        </div>
+            <div class="product-card">
+          <img src="biopeptix4.jpg.webp" alt="Biopeptix Product 4">
+          <h3>Soothing and Firming Serum</h3>
+          <p>סרום הרגעה ומיצוק.</p>
+          <p class="price">300 ₪</p>
+        </div>
+            <div class="product-card">
+          <img src="biopeptix5.jpg.webp" alt="Biopeptix Product 5">
+          <h3>3A Serum</h3>
+          <p>הגנה מפני אור כחול.</p>
+          <p class="price">350 ₪</p>
+        </div>
+            <div class="product-card">
+          <img src="biopeptix6.jpg.webp" alt="Biopeptix Product 6">
+          <h3>Pome-Peel</h3>
+          <p>פילינג חומצות פרי.</p>
+          <p class="price">360 ₪</p>
         </div>
       </div>
 
