--- a/dermalosophy.html
+++ b/dermalosophy.html
@@ -42,10 +42,34 @@
         </div>
 
         <div class="product-card">
-          <img src="dermalosophy2.jpg" alt="Dermalosophy Product 2">
+          <img src="dermalosophy2.jpg.webp" alt="Dermalosophy Product 2">
           <h3>Calming Mask</h3>
           <p>מסכת הרגעה לעור רגיש ואדמומי.</p>
           <p class="price">230 ₪</p>
+        </div>
+          <div class="product-card">
+          <img src="dermalosophy3.jpg.webp" alt="Dermalosophy Product 3">
+          <h3>Eye Cream</h3>
+          <p>קרם עיניים.</p>
+          <p class="price">220 ₪</p>
+        </div>
+         <div class="product-card">
+          <img src="dermalosophy4.jpg.webp" alt="Dermalosophy Product 4">
+          <h3>Make up Blur</h3>
+          <p>מייקאפ תיקון  .</p>
+          <p class="price">300 ₪</p>
+        </div>
+          <div class="product-card">
+          <img src="dermalosophy5.jpg.webp" alt="Dermalosophy Product 5">
+          <h3>CLEANSER FOR ALL SKIN TYPES</h3>
+          <p>קצף ניקוי  .</p>
+          <p class="price">280 ₪</p>
+        </div>
+          <div class="product-card">
+          <img src="dermalosophy6.jpg.webp" alt="Dermalosophy Product 6">
+          <h3>BLOCK SPF 50 DEMI MAKE UP</h3>
+          <p>קרם לחות עם מקדם הגנה   .</p>
+          <p class="price">260 ₪</p>
         </div>
       </div>
 
