--- a/renew.html
+++ b/renew.html
@@ -42,10 +42,34 @@
         </div>
 
         <div class="product-card">
-          <img src="renew2.jpg" alt="Renew Product 2">
+          <img src="renew2.jpg.png" alt="Renew Product 2">
           <h3>Retinol Night Serum</h3>
           <p>סרום לילה עם רטינול לשיפור מרקם העור.</p>
           <p class="price">260 ₪</p>
+        </div>
+        <div class="product-card">
+          <img src="renew3.jpg.png" alt="Renew Product 3">
+          <h3> Comfort Glow Moisturizer</h3>
+          <p>קרם לחות נגד קמטים.</p>
+          <p class="price">260 ₪</p>
+        </div>
+         <div class="product-card">
+          <img src="renew4.jpg.png" alt="Renew Product 4">
+          <h3> Depigmenting Mask</h3>
+          <p>מסכת הבהרה.</p>
+          <p class="price">106 ₪</p>
+        </div>
+         <div class="product-card">
+          <img src="renew5.jpg.png" alt="Renew Product 5">
+          <h3> Drying Dermo Control</h3>
+          <p>תרחיף מייבש.</p>
+          <p class="price">79 ₪</p>
+        </div>
+           <div class="product-card">
+          <img src="renew6.jpg.png" alt="Renew Product 6">
+          <h3>  Neck & Decollete Firming</h3>
+          <p>קרם צוואר ממצק</p>
+          <p class="price">150 ₪</p>
         </div>
 
         <!-- תוסיפי כאן עוד כרטיסים של מוצרים לפי הצורך -->
