--- a/biopeptix.html
+++ b/biopeptix.html
@@ -54,3 +54,18 @@
     </main>
 
   </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+  <script src="products.js"></script>
+
+  <script src="cart.js?v=2"></script>
+  
+  <script>
+    document.addEventListener("DOMContentLoaded", () => {
+      renderProducts('biopeptix');
+    });
+  </script>
+
+</body>
+</html>
