Add checkout page and functionality for order summary and form submission

--- a/cart.html
+++ b/cart.html
@@ -84,7 +84,7 @@
 
       <div class="cart-actions">
         <button id="clear-cart" class="btn-clear">רוקן עגלה</button>
-        <button id="checkout-btn" class="btn-checkout">המשך לתשלום</button>
+        <a href="checkout.html" class="btn-checkout">המשך לתשלום</a>
       </div>
     </main>
 
