--- a/checkout.html
+++ b/checkout.html
@@ -4,6 +4,85 @@
 <meta charset="UTF-8">
 <title>Checkout</title>
 <link rel="stylesheet" href="styles.css">
+
+<style>
+
+.checkout-container {
+max-width: 650px;
+margin: 40px auto;
+background: #ffffff;
+padding: 35px;
+border-radius: 16px;
+box-shadow: 0 4px 20px rgba(0,0,0,0.08);
+font-family: 'Playfair Display', serif;
+}
+
+.checkout-title {
+text-align: center;
+margin-bottom: 30px;
+font-size: 2rem;
+font-weight: bold;
+color: #000;
+}
+
+#order-summary {
+background: #fafafa;
+padding: 20px;
+border-radius: 12px;
+margin-bottom: 30px;
+border: 1px solid #eee;
+}
+
+#summary-list li {
+padding: 5px 0;
+font-size: 1rem;
+border-bottom: 1px solid #eee;
+}
+
+.total-price {
+margin-top: 15px;
+font-size: 1.2rem;
+font-weight: bold;
+}
+
+#checkout-form {
+background: #fafafa;
+padding: 20px;
+border-radius: 12px;
+border: 1px solid #eee;
+display: flex;
+flex-direction: column;
+gap: 12px;
+}
+
+#checkout-form label {
+font-weight: bold;
+}
+
+#checkout-form input {
+padding: 10px;
+border-radius: 6px;
+border: 1px solid #ccc;
+font-size: 1rem;
+}
+
+.checkout-btn {
+background: #000;
+color: #fff;
+padding: 12px 18px;
+margin-top: 10px;
+border: none;
+border-radius: 8px;
+font-size: 1.1rem;
+cursor: pointer;
+transition: 0.2s ease-in-out;
+}
+
+.checkout-btn:hover {
+background: #333;
+}
+
+</style>
 </head>
 <body>
 <div class="checkout-container">
