--- a/catalog.html
+++ b/catalog.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="he" dir="rtl">
+<html lang="en" dir="ltr">
 <head>
   <meta charset="UTF-8">
-  <title>קטלוג מוצרים</title>
+  <title>Product Catalog</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles.css?v=1000">
 </head>
 
 <body>
@@ -38,21 +38,33 @@
         <a href="dermalosophy.html" class="brand-link">
           <div class="brand-card">
             <img src="logo dermalosophy.jpg" alt="Dermalosophy logo">
-            <h2>dermalosophy</h2>
+            <div class="card-info">
+              <h2>Dermalosophy</h2>
+              <p>Advanced cosmetic solutions for treating skin concerns, based on cutting-edge science and technology.</p>
+              <div class="fake-btn">Discover More</div>
+            </div>
           </div>
         </a>
 
         <a href="biopeptix.html" class="brand-link">
           <div class="brand-card">
             <img src="logo biopeptix.jpg" alt="Biopeptix logo">
-            <h2>Biopeptix</h2>
+            <div class="card-info">
+              <h2>Biopeptix</h2>
+              <p>Active bio-peptide series designed to renew, firm, and revitalize your skin's natural appearance.</p>
+              <div class="fake-btn">Discover More</div>
+            </div>
           </div>
         </a>
 
         <a href="renew.html" class="brand-link">
           <div class="brand-card">
             <img src="logo renew.jpg" alt="Renew logo">
-            <h2>RENEW</h2>
+            <div class="card-info">
+              <h2>RENEW</h2>
+              <p>Professional skincare products that provide a glowing, healthy, and fresh look over time.</p>
+              <div class="fake-btn">Discover More</div>
+            </div>
           </div>
         </a>
 
