--- a/biopeptix.html
+++ b/biopeptix.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>dermalosophy Products</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500&family=Lato:wght@300;400&display=swap" rel="stylesheet">
   
   <link rel="stylesheet" href="styles.css?v=4">
   
