--- a/cart.html
+++ b/cart.html
@@ -5,7 +5,7 @@
   <title>העגלה שלי – PÉDANT Cosmetic</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500&family=Lato:wght@300;400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
   <style>
     /* עיצוב ספציפי לעגלה */
