--- a/about.html
+++ b/about.html
@@ -28,7 +28,9 @@
           <li><a href="#contact">CONTACT</a></li>
           <li><a href="login.html">LOGIN</a></li>
           <li><a href="signup.html">SIGN UP</a></li>
+          <li><a href="faq.html">FAQ</a></li>
           <li><a href="cart.html"><img src="cart.png" class="cart-icon"></a></li>
+          
   </ul>
 </nav>
 
