--- a/cart.html
+++ b/cart.html
@@ -29,6 +29,7 @@
       border-radius: 24px;
       cursor: pointer;
       font-size: 16px;
+      text-decoration: none;
     }
     .btn-clear {
       background-color: transparent;
@@ -41,12 +42,25 @@
     }
     .cart-summary-box {
         margin-top: 30px;
-        text-align: left; /* כדי שהמחיר יהיה בצד שמאל או ימין תלוי בעיצוב */
-        font-size: 1.2rem;
-        font-weight: bold;
+        text-align: left;
         padding: 20px;
         background: #f9f9f9;
         border-radius: 10px;
+        max-width: 400px;
+        margin-right: auto; /* הצמדה לשמאל בעברית */
+    }
+    .summary-row {
+      display: flex;
+      justify-content: space-between;
+      margin-bottom: 10px;
+      font-family: 'Lato', sans-serif;
+    }
+    .summary-row.total {
+      font-weight: bold;
+      font-size: 1.2rem;
+      border-top: 1px solid #ddd;
+      padding-top: 10px;
+      margin-top: 10px;
     }
   </style>
 </head>
@@ -65,9 +79,9 @@
           <li><a href="index.html">HOME</a></li>
           <li><a href="catalog.html">CATALOG</a></li>
           <li><a href="about.html">ABOUT</a></li>
-          <li><a href="#contact">CONTACT</a></li>
-          <li><a href="login.html">LOGIN</a></li>
+          <li><a href="faq.html">FAQ</a></li> <li><a href="contact.html">CONTACT</a></li> <li><a href="login.html">LOGIN</a></li>
           <li><a href="signup.html">SIGN UP</a></li>
+          <li><a href="faq.html">FAQ</a></li>
           <li><a href="cart.html"><img src="cart.png" class="cart-icon"></a></li>
         </ul>
       </nav>
@@ -79,7 +93,29 @@
       <div id="cart-items"></div>
 
       <div class="cart-summary-box">
-        סה"כ לתשלום: <span id="cart-subtotal">₪0</span>
+        <div class="summary-row">
+          <span>סכום ביניים:</span>
+          <span id="cart-subtotal-val">₪0</span>
+        </div>
+        
+        <div class="summary-row" id="discount-row" style="display:none; color: green;">
+          <span>הנחה:</span>
+          <span id="cart-discount-val">-₪0</span>
+        </div>
+
+        <div class="summary-row total">
+          <span>סה"כ לתשלום:</span>
+          <span id="cart-total-final">₪0</span>
+        </div>
+
+        <div class="coupon-section">
+          <label style="font-size:14px; font-weight:bold;">יש לך קוד קופון?</label>
+          <div class="coupon-box">
+            <input type="text" id="coupon-code" class="coupon-input" placeholder="הכנס קוד כאן">
+            <button onclick="applyCoupon()" class="coupon-btn">הפעל</button>
+          </div>
+          <div id="coupon-message" class="coupon-message"></div>
+        </div>
       </div>
 
       <div class="cart-actions">
@@ -115,7 +151,9 @@
 
   </div>
 
-  <script src="products.js"></script> <script src="cart.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <script src="products.js"></script> 
+  <script src="cart.js"></script>
 
 </body>
 </html>
