--- a/catalog.html
+++ b/catalog.html
@@ -184,10 +184,14 @@
 
     <nav>
       <ul>
-        <li><a href="index.html">HOME</a></li>
-        <li><a href="catalog.html">CATALOG</a></li>
-        <li><a href="about.html">ABOUT</a></li>
-        <li><a href="cart.html">CART</a></li>
+          <li><a href="index.html">HOME</a></li>
+          <li><a href="catalog.html">CATALOG</a></li>
+          <li><a href="about.html">ABOUT</a></li>
+          <li><a href="faq.html">FAQ</a></li>
+          <li><a href="contact.html">CONTACT</a></li>
+          <li><a href="login.html">LOGIN</a></li>
+          <li><a href="signup.html">SIGN UP</a></li>
+          <li><a href="cart.html"><img src="cart.png" class="cart-icon"></a></li>
       </ul>
     </nav>
   </header>
