--- a/contact.html
+++ b/contact.html
@@ -200,6 +200,7 @@
         <li><a href="contact.html">CONTACT</a></li>
         <li><a href="login.html">LOGIN</a></li>
         <li><a href="signup.html">SIGN UP</a></li>
+        <li><a href="faq.html">FAQ</a></li>
         <li><a href="cart.html"><img src="cart.png" class="cart-icon" alt="Cart"></a></li>
       </ul>
     </nav>
