--- a/signup.html
+++ b/signup.html
@@ -27,6 +27,7 @@
     <li><a href="contact.html">CONTACT</a></li>
     <li><a href="login.html">LOGIN</a></li>
     <li><a href="signup.html">SIGN UP</a></li>
+    <li><a href="faq.html">FAQ</a></li>
   </ul>
 </nav>
 
