--- a/contact.html
+++ b/contact.html
@@ -198,8 +198,10 @@
         <li><a href="catalog.html">CATALOG</a></li>
         <li><a href="about.html">ABOUT</a></li>
         <li><a href="contact.html">CONTACT</a></li>
-        <li><a href="login.html">LOGIN</a></li>
-        <li><a href="signup.html">SIGN UP</a></li>
+        <li id="nav-profile-item" style="display:none;"><a href="profile.html">PROFILE</a></li>
+        <li id="nav-login" style="display:none;"><a href="login.html">LOGIN</a></li>
+        <li id="nav-signup" style="display:none;"><a href="signup.html">SIGN UP</a></li>
+        <li id="nav-logout" style="display:none;"><a href="#" onclick="logout(event)">LOGOUT</a></li>
         <li><a href="faq.html">FAQ</a></li>
         <li><a href="cart.html"><img src="cart.png" class="cart-icon" alt="Cart"></a></li>
       </ul>
@@ -251,5 +253,6 @@
     <p>&copy; 2025 PÉDANT Cosmetic</p>
   </footer>
 
+  <script src="auth.js"></script>
 </body>
 </html>
