--- a/faq.html
+++ b/faq.html
@@ -22,8 +22,10 @@
           <li><a href="about.html">ABOUT</a></li>
           <li><a href="faq.html">FAQ</a></li>
           <li><a href="contact.html">CONTACT</a></li>
-          <li><a href="login.html">LOGIN</a></li>
-          <li><a href="signup.html">SIGN UP</a></li>
+          <li id="nav-profile-item" style="display:none;"><a href="profile.html">PROFILE</a></li>
+          <li id="nav-login" style="display:none;"><a href="login.html">LOGIN</a></li>
+          <li id="nav-signup" style="display:none;"><a href="signup.html">SIGN UP</a></li>
+          <li id="nav-logout" style="display:none;"><a href="#" onclick="logout(event)">LOGOUT</a></li>
           <li><a href="cart.html"><img src="cart.png" class="cart-icon"></a></li>
         </ul>
       </nav>
