--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
           <li><a href="catalog.html">CATALOG</a></li>
           <li><a href="about.html">ABOUT</a></li>
           <li><a href="#contact">CONTACT</a></li>
-          <li><a href="login.html">LOGIN</a></li>
-          <li><a href="signup.html">SIGN UP</a></li>
+          <li id="nav-profile-item" style="display:none;"><a href="profile.html">PROFILE</a></li>
+          <li id="nav-login" style="display:none;"><a href="login.html">LOGIN</a></li>
+          <li id="nav-signup" style="display:none;"><a href="signup.html">SIGN UP</a></li>
+          <li id="nav-logout" style="display:none;"><a href="#" onclick="logout(event)">LOGOUT</a></li>
           <li><a href="faq.html">FAQ</a></li>
           <li><a href="cart.html"><img src="cart.png" class="cart-icon"></a></li>
         </ul>
@@ -111,5 +113,6 @@
 
   </div>
 
+  <script src="auth.js"></script>
 </body>
 </html>
