--- a/signup.html
+++ b/signup.html
@@ -19,14 +19,15 @@
       </div>
 
       <nav>
-      <nav>
   <ul>
     <li><a href="index.html">HOME</a></li>
     <li><a href="catalog.html">CATALOG</a></li>   <!-- אם יש לך דף כזה -->
     <li><a href="about.html">ABOUT</a></li>
     <li><a href="contact.html">CONTACT</a></li>
-    <li><a href="login.html">LOGIN</a></li>
-    <li><a href="signup.html">SIGN UP</a></li>
+    <li id="nav-profile-item" style="display:none;"><a href="profile.html">PROFILE</a></li>
+    <li id="nav-login" style="display:none;"><a href="login.html">LOGIN</a></li>
+    <li id="nav-signup" style="display:none;"><a href="signup.html">SIGN UP</a></li>
+    <li id="nav-logout" style="display:none;"><a href="#" onclick="logout(event)">LOGOUT</a></li>
     <li><a href="faq.html">FAQ</a></li>
   </ul>
 </nav>
@@ -36,20 +37,20 @@
     <section class="auth-section">
       <h2>Create Account</h2>
 
-      <form class="auth-form">
+      <form class="auth-form" id="signup-form">
         <label>
           Full Name:
-          <input type="text" required>
+          <input type="text" id="signup-name" required>
         </label>
 
         <label>
           Email:
-          <input type="email" required>
+          <input type="email" id="signup-email" required>
         </label>
 
         <label>
           Password:
-          <input type="password" required>
+          <input type="password" id="signup-password" required>
         </label>
 
         <button type="submit">Sign Up</button>
@@ -105,5 +106,4 @@
 
   </div>
 
-</body>
-</html>
+  <script src="auth.js"></script>
