--- a/login.html
+++ b/login.html
@@ -38,6 +38,14 @@
     <section class="auth-section">
       <h2>Login</h2>
 
+      <div class="test-info" style="background-color: #f0f8ff; border-left: 4px solid #2196F3; padding: 15px; margin-bottom: 20px; border-radius: 4px;">
+        <p style="margin: 0; font-size: 14px; color: #333;">
+          <strong>לבדיקה בלבד:</strong><br>
+          Email: test@example.com<br>
+          Password: 123456
+        </p>
+      </div>
+
       <form class="auth-form" id="login-form">
         <label>
           Email:
